--- a/LabMob/src/app/home/home.page.html
+++ b/LabMob/src/app/home/home.page.html
@@ -103,6 +103,19 @@
           </ion-label>
         </ion-item>
       </ion-list>
+
+      <!-- La mappa -->
+      <ion-card>
+        <ion-card-header>
+          <ion-card-title>Mappa</ion-card-title>
+        </ion-card-header>
+        <ion-card-content>
+          <div style="position: relative; width: 100%; height: 300px;">
+            <div id="map" style="width: 100%; height: 100%;"></div>
+          </div>
+        </ion-card-content>
+      </ion-card>
+
     </ion-content>
     <!-- Barra di navigazione in basso -->
     <ion-footer>
