--- a/LabMob/src/app/home/home.page.scss
+++ b/LabMob/src/app/home/home.page.scss
@@ -36,9 +36,17 @@ body {
 ion-menu::part(backdrop) {
   background-color: rgba(255, 0, 255, 0.5);
 }
+ion-card-content {
+  overflow: hidden;
+}
 
 ion-menu::part(container) {
   border-radius: 0 20px 20px 0;
 
   box-shadow: 4px 0px 16px rgba(255, 0, 255, 0.18);
+}
+
+#map {
+  height: 100%;
+  width: 100%;
 }
