--- a/LabMob/src/app/home/home.page.html
+++ b/LabMob/src/app/home/home.page.html
@@ -105,17 +105,10 @@
       </ion-list>
 
       <!-- La mappa -->
-      <ion-card>
-        <ion-card-header>
-          <ion-card-title>Mappa</ion-card-title>
-        </ion-card-header>
-        <ion-card-content>
-          <div style="position: relative; width: 100%; height: 300px;">
-            <div id="map" style="width: 100%; height: 100%;"></div>
-          </div>
-        </ion-card-content>
-      </ion-card>
 
+      <div style=" background: transparent; width: 100%; height: 300px;">
+        <div id="map" style="width: 100%; height: 90%;"></div>
+      </div>
     </ion-content>
     <!-- Barra di navigazione in basso -->
     <ion-footer>
