--- a/LabMob/src/app/home/home.page.html
+++ b/LabMob/src/app/home/home.page.html
@@ -105,7 +105,9 @@
       </ion-list>
 
       <!-- La mappa -->
-
+      <ion-card>
+        <button (click)="activateGeofenceMode()">Aggiungi Geofence</button>
+      </ion-card>
       <div style=" background: transparent; width: 100%; height: 300px;">
         <div id="map" style="width: 100%; height: 90%;"></div>
       </div>
