--- a/LabMob/src/app/home/home.page.html
+++ b/LabMob/src/app/home/home.page.html
@@ -96,14 +96,14 @@
 
       <!-- La mappa -->
       <ion-card>
-        <button (click)="activateGeofenceMode()">Aggiungi Geofence</button>
+        <ion-button (click)="activateGeofenceMode()">Aggiungi Geofence</ion-button>
       </ion-card>
       <div style=" background: transparent; width: 100%; height: 300px;">
         <div id="map" style="width: 100%; height: 90%;"></div>
       </div>
 
       <ion-card>
-        <button (click)="showGeofences()">Mostra Geofence</button>
+        <ion-button (click)="showGeofences()">Mostra Geofence</ion-button>
       </ion-card>
 
       <!-- Elenco dei geofence salvati -->
@@ -112,9 +112,13 @@
           <ion-label>
             Geofence: Lat: {{ geofence.lat }}, Lng: {{ geofence.lng }}, Raggio: {{ geofence.radius }}m
           </ion-label>
+          <!-- Bottone Trova che chiama la funzione centerMapOnGeofence -->
+          <ion-button>Trova</ion-button>
           <ion-button color="danger" (click)="removeGeofence(i)">Rimuovi</ion-button>
         </ion-item>
       </ion-list>
+
+
 
     </ion-content>
     <!-- Barra di navigazione in basso -->
