--- a/LabMob/src/theme/variables.scss
+++ b/LabMob/src/theme/variables.scss
@@ -1,2 +1,7 @@
 // For information on how to create your own theme, please see:
 // http://ionicframework.com/docs/theming/
+@media (prefers-color-scheme: dark) {
+  .md body {
+    --ion-background-color: transparent;
+  }
+}
