--- a/LabMob/src/app/home/home.page.html
+++ b/LabMob/src/app/home/home.page.html
@@ -102,21 +102,21 @@
         <div id="map" style="width: 100%; height: 90%;"></div>
       </div>
 
-      <ion-card>
-        <ion-button (click)="showGeofences()">Mostra Geofence</ion-button>
-      </ion-card>
+      <ion-button color="danger" (click)="showGeofences()">
+        {{ isGeofenceListVisible ? 'Nascondi Geofence' : 'Mostra Geofence' }}
+      </ion-button>
 
-      <!-- Elenco dei geofence salvati -->
-      <ion-list *ngIf="geofences && geofences.length > 0">
-        <ion-item *ngFor="let geofence of geofences; let i = index">
-          <ion-label>
-            Geofence: Lat: {{ geofence.lat }}, Lng: {{ geofence.lng }}, Raggio: {{ geofence.radius }}m
-          </ion-label>
-          <!-- Bottone Trova che chiama la funzione centerMapOnGeofence -->
-          <ion-button>Trova</ion-button>
-          <ion-button color="danger" (click)="removeGeofence(i)">Rimuovi</ion-button>
-        </ion-item>
-      </ion-list>
+      <div *ngIf="isGeofenceListVisible">
+        <ion-list>
+          <ion-item *ngFor="let geofence of geofences; let i = index">
+            <ion-label>
+              Geofence {{ i + 1 }} - Lat: {{ geofence.lat }}, Lng: {{ geofence.lng }}, Raggio: {{ geofence.radius }}m
+            </ion-label>
+            <ion-button color="danger" (click)="removeGeofence(i)">Rimuovi</ion-button>
+          </ion-item>
+        </ion-list>
+      </div>
+
 
 
 
