--- a/LabMob/src/app/home/home.page.html
+++ b/LabMob/src/app/home/home.page.html
@@ -97,14 +97,17 @@
       <!-- La mappa -->
       <ion-card>
         <ion-button (click)="activateGeofenceMode()">Aggiungi Geofence</ion-button>
+        <ion-button color="danger" (click)="showGeofences()">
+          {{ isGeofenceListVisible ? 'Nascondi Geofence' : 'Mostra Geofence' }}
+        </ion-button>
       </ion-card>
       <div style=" background: transparent; width: 100%; height: 300px;">
         <div id="map" style="width: 100%; height: 90%;"></div>
       </div>
 
-      <ion-button color="danger" (click)="showGeofences()">
-        {{ isGeofenceListVisible ? 'Nascondi Geofence' : 'Mostra Geofence' }}
-      </ion-button>
+      <ion-card>
+
+      </ion-card>
 
       <div *ngIf="isGeofenceListVisible">
         <ion-list>
