rifare dark mode

--- a/LabMob/src/theme/variables.scss
+++ b/LabMob/src/theme/variables.scss
@@ -1,7 +1,8 @@
 // For information on how to create your own theme, please see:
 // http://ionicframework.com/docs/theming/
+/*
 @media (prefers-color-scheme: dark) {
   .md body {
     --ion-background-color: transparent;
   }
-}
+}*/
