--- a/LabMob/src/app/community/community.page.html
+++ b/LabMob/src/app/community/community.page.html
@@ -16,7 +16,7 @@
           <ion-icon name="list-circle-outline" slot="start"></ion-icon>
           <ion-label>Lista Utenti</ion-label>
         </ion-item>
-        <ion-item (click)="displayUploadPage()"> <!-- Aggiungi il click handler per Upload -->
+        <ion-item (click)="displayUploadPage()">
           <ion-icon name="cloud-upload-outline" slot="start"></ion-icon>
           <ion-label>Upload</ion-label>
         </ion-item>
@@ -28,7 +28,7 @@
     <ion-header>
       <ion-toolbar>
         <ion-buttons slot="start">
-          <ion-menu-button auto-hide="false"></ion-menu-button> <!-- Bottone per aprire il menu -->
+          <ion-menu-button auto-hide="false"></ion-menu-button>
         </ion-buttons>
         <ion-title slot="start">Community</ion-title>
         <ion-button slot="end" id="lout" *ngIf="user" (click)="logout()">Logout</ion-button>
@@ -37,7 +37,7 @@
 
     <ion-content>
       <div>
-        <!-- Card di login che viene mostrata solo quando nessuna pagina utente, lista utenti o upload è attiva -->
+        <!-- Card di login-->
         <ion-card *ngIf="!showUserPage && !showUserListPage && !showUploadPage">
           <ion-card-content>
             <p>{{ loginMessage }}</p>
@@ -70,7 +70,6 @@
                 <ion-label>
                   <p>Email Follower: {{ followerEmail }}</p>
                 </ion-label>
-                <!-- Aggiungi l'icona del cestino per rimuovere il follower -->
                 <ion-button slot="end" fill="clear" (click)="removeFollower(i)">
                   <ion-icon name="trash-bin-outline"></ion-icon>
                 </ion-button>
@@ -82,9 +81,7 @@
           </ion-card-content>
         </ion-card>
 
-
-
-        <!-- Card per la pagina Lista Utenti -->
+        <!-- Card per la Lista Utenti -->
         <ion-card *ngIf="showUserListPage">
           <ion-card-header>
             <ion-card-title>Lista Utenti</ion-card-title>
@@ -96,7 +93,6 @@
                 <ion-label>
                   <h3>{{ user.email }}</h3>
                 </ion-label>
-                <!-- Pulsante Follow/Unfollow con stili personalizzati -->
                 <ion-button (click)="toggleFollow(user)"
                             fill="outline"
                             [color]="user.isFollowing ? 'danger' : 'primary'">
@@ -111,8 +107,6 @@
           </ion-card-content>
         </ion-card>
 
-
-
         <!-- Card per la pagina Upload -->
         <ion-card *ngIf="showUploadPage">
           <ion-card-header>
@@ -125,7 +119,6 @@
             </div>
 
 
-            <!-- Aggiungi il nuovo bottone arancione -->
             <ion-button color="warning" fill="solid" (click)="onUploadButtonClick()">
               <ion-icon name="documents-outline"></ion-icon>
               CARICA ATTIVITA'
